added map-lookup to ScenarioImpl.createId() to reuse already existing Ids. Changed some top-level-readers (Network, Population, World, ActivityFacilities, Matrices) to use scenario.createId() instead of "new IdImpl()" to make use of the lookup for reduced memory consumption. Had to change a lot of Reader/Parser-Constructors to actually receive the Scenario-Object instead of just the data container, which required changes in a lot of files.
git-svn-id: file:///srv/local/data/cleanRepo/trunk@10134 a0517364-e873-4167-b1c8-416daa5a6b91